Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-68025

[REG:5.9.3->5.11] QML singleton issue

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.11.1
    • 5.11.1
    • None
    • Ubuntu Linux 16.04 x86_64, built with Clang 7.0 toolchain (with ASAN enabled).

      Please see the following test case, which runs successfully when built with Qt 5.9.3 but fails when built with Qt 5.11 (latest from git).

       

      It seems that when the root component is loaded via QQmlComponent, and the object hierarchy contains a JS function binding which makes use a QML singleton type which was registered from C++, loading will fail with an error: "Type Testcase/Feedback unavailable: no matching type found, pragma Singleton files cannot be used by QQmlComponent".

        1. testcase.zip
          2 kB
          Christopher Adams
        2. testcase.tar.gz
          1 kB
          Christopher Adams
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            shausman Simon Hausmann
            chrisadams Christopher Adams
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes